# codex

codex-rs/: Cargo.toml
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/core/: gpt_5_codex_prompt.md
codex-rs/llmcc/: Cargo.toml  llmcc_tool_instructions.md
codex-rs/llmcc/src/: lib.rs  main.rs
