[package]
name = "codex-llmcc"
version.workspace = true
edition.workspace = true
# publish.workspace = true

[lints]
workspace = true

[[bin]]
path = "src/main.rs"
name = "llmcc"


[lib]
path = "src/lib.rs"
name = "codex_llmcc"

[dependencies]
# llmcc-core.workspace = true
llmcc.workspace = true
llmcc-rust.workspace = true
llmcc-python.workspace = true
clap.workspace = true
anyhow.workspace = true
